--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.0",
     "expo-font": "~8.4.0",
+    "expo-linking": "~2.0.0",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
